--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "simple-erc20",
   "version": "1.0.0",
-  "description": "## Requirement",
+  "description": "",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^2.5.0"
+    "@openzeppelin/contracts": "^2.5.0",
+    "bignumber.js": "^9.0.0",
+    "truffle": "^5.1.21"
   }
 }
